# state-space-explorer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  Makefile.config  README.md  instrument.sh  search_tree.py
src/: bound.cpp  bound.hpp  dependence.cpp  dependence.hpp  depth_first_search.cpp  depth_first_search.hpp  dfs.cpp  dfs.hpp  dpor.cpp  dpor.hpp  exploration.cpp  exploration.hpp  happens_before.cpp  happens_before.hpp  options.hpp  run_bounded_search.cpp  run_depth_first_search.cpp  run_dpor.cpp  test.cpp  vector_clock.cpp  vector_clock.hpp
src/bound_functions/: local_bound_function.hpp  preemptions.cpp  preemptions.hpp
src/selection_strategies/: CMakeLists.txt  Makefile  custom_selector_register.cpp  custom_selector_register.hpp  sleep_sets.cpp  sleep_sets.hpp
src/sufficient_sets/: bound_persistent_set.cpp  bound_persistent_set.hpp  persistent_set.cpp  persistent_set.hpp  sleep_set.cpp  sleep_set.hpp  source_set.cpp  source_set.hpp  sufficient_set.cpp  sufficient_set.hpp
tests/: CMakeLists.txt  dfs_TEST.cpp  dpor_TEST.cpp  main_TEST.cpp  vector_clock_TEST.cpp
tests/include/: test_helpers.hpp
tests/test_programs/: deadlock_join_wait.cpp  shared_memory_access_non_concurrent.cpp
tests/test_programs/benchmarks/: readers_nonpreemptive.c
tools/: execution_tree.py  search_tree.py
